style: fix text overflow in blog post page and text editor

--- a/frontend/src/assets/styles/index.scss
+++ b/frontend/src/assets/styles/index.scss
@@ -7,8 +7,6 @@
 
 * {
   box-sizing: border-box;
-  //   text-decoration: none;
-  //   list-style: none;
   color: $black;
   padding: 0;
   margin: 0;
@@ -21,6 +19,12 @@
 
 .tiptap,
 .post-details-content {
+  * {
+    overflow-wrap: break-word;
+    white-space: normal;
+    max-width: 100%;
+  }
+
   u {
     text-decoration: underline;
   }
@@ -60,13 +64,13 @@
   }
 
   p.is-editor-empty:first-child::before {
+    content: attr(data-placeholder);
+    pointer-events: none;
     font-size: 0.875rem;
     font-weight: normal;
     color: #999;
-    content: attr(data-placeholder);
     float: left;
     height: 0;
-    pointer-events: none;
   }
 }
 
